--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -9,10 +9,4 @@ $coolGrey: rgb(137, 176, 174);
 $black: rgb(0, 0, 0);
 $white: rgb(255, 255, 255);
 $red: rgb(255, 103, 103);
-$green: #93d9a3;
-
-// Old colours
-$darkBlue: rgb(61, 90, 128);
-$lightBlue: rgb(152, 193, 217);
-$darkGrey: rgb(45, 55, 71);
-$lightGrey: rgb(168, 168, 168);
+$green: rgb(147, 217, 163);
