--- a/styles/styles.css
+++ b/styles/styles.css
@@ -273,7 +273,7 @@ body {
   font-size: 62.5%;
   font-family: "Roboto", sans-serif;
   background-color: #ffd6ba;
-  color: #2d3747;
+  color: #555b6e;
 }
 
 h1,
@@ -306,7 +306,7 @@ li {
 a {
   display: inline-block;
   text-decoration: none;
-  color: #2d3747;
+  color: #555b6e;
 }
 
 img {
@@ -370,6 +370,17 @@ header {
 .primaryBtn:hover, .primaryBtn:focus, .primaryBtn:active {
   color: #555b6e;
   background-color: rgba(250, 249, 249, 0.8);
+}
+
+.secondaryBtn {
+  color: #555b6e;
+  background-color: #bee3db;
+  border-color: #bee3db;
+}
+.secondaryBtn:hover, .secondaryBtn:focus, .secondaryBtn:active {
+  color: white;
+  background-color: #89b0ae;
+  border-color: #89b0ae;
 }
 
 nav {
@@ -793,7 +804,7 @@ h3 {
 
 .contactImgContainer {
   width: 40%;
-  margin-right: 10px;
+  margin-right: 30px;
 }
 .contactImgContainer img {
   border-radius: 5px;
@@ -837,29 +848,35 @@ h3 {
 }
 
 .contactInput {
-  background-color: #3d5a80;
+  background-color: #89b0ae;
   color: white;
-  border: 1px solid #2d3747;
+  border: 1px solid #89b0ae;
   padding: 13px;
   font-size: 1rem;
   border-radius: 5px;
   width: 100%;
   margin-bottom: 10px;
+  font-weight: 700;
 }
 .contactInput::-webkit-input-placeholder {
   color: white;
+  font-weight: 700;
 }
 .contactInput::-moz-placeholder {
   color: white;
+  font-weight: 700;
 }
 .contactInput:-ms-input-placeholder {
   color: white;
+  font-weight: 700;
 }
 .contactInput::-ms-input-placeholder {
   color: white;
+  font-weight: 700;
 }
 .contactInput::placeholder {
   color: white;
+  font-weight: 700;
 }
 .contactInput:hover {
   border-width: 2px;
@@ -870,7 +887,7 @@ h3 {
   outline: 0;
   border-width: 2px;
   padding: calc(13px - 1px);
-  border-color: #555b6e;
+  border-color: black;
 }
 
 .formSubmitBtnContainer {
